2009-12-20  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        * platform/gtk/editing/pasteboard/middle-button-paste-expected.txt:
        * platform/gtk/editing/pasteboard/middle-button-paste.html:

2009-12-20  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Darin Adler.

        Upstreaming two plugin tests from chromium.org.
        https://bugs.webkit.org/show_bug.cgi?id=32750

        * plugins/get-file-url-expected.txt: Added.
        * plugins/get-file-url.html: Added.
        * plugins/get-url-with-iframe-target-expected.txt: Added.
        * plugins/get-url-with-iframe-target.html: Added.
        * plugins/resources/get-file-url-subframe.html: Added.

2009-12-20  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Darin Adler.

        Upstream a test from chromium.org that verifies that calling
        document.clear() from an external script doesn't crash the browser.
        https://bugs.webkit.org/show_bug.cgi?id=32743

        * fast/dom/document-clear-expected.txt: Added.
        * fast/dom/document-clear.html: Added.
        * fast/dom/resources/document-clear.js: Added.

2009-12-20  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=32735

        Upstream a test from chromium.org - ensure that creating a 
        new Image is actually creating an HTML image element, regardless
        of the doctype.

        * svg/custom/new-image-is-html-element-expected.txt: Added.
        * svg/custom/new-image-is-html-element.svg: Added.

2009-12-20  Dirk Pranke  <dpranke@fila-macpro.mtv.corp.google.com>

        Reviewed by Darin Adler.

        upstream test from chromium.org - this tests simulating italic
        on glyphs that don't have an italic version.

        https://bugs.webkit.org/show_bug.cgi?id=32693

        * fast/text/fake-italic.html: Added.
        * platform/mac/fast/text/fake-italic-expected.checksum: Added.