@@ -1,3 +1,3 @@
-Select me, select me, selSelect me, sect me
+Select me, select me, select meSelect me, select me, select me
 
-The original text was "Select me, select me, select me", after selecting and pasting the result should be "Select me, selecSelect mt me, select me"
+The original text was "Select me, select me, select me", after selecting and pasting the result should be "Select me, select me, select meSelect me, select me, select me"
